# MasterThesis

./: .gitignore  Ap Prep Tese.pptx
Bibliography/: bibliography.bib
Chapters/: abstract-en.tex  abstract-pt.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  glossary.tex
Config/: 1_novathesis.tex  3_cover.tex  4_files.tex  5_packages.tex
artigos/: Notas Relational verification using product programs.docx
bip2ml/src/: ast_bip.ml  lexer_test.bip  parser.automaton
bipToOCamlTranspiler/: test.ml  test.mlw
bipToOCamlTranspiler/icl-lab5/: ast.ml  interp.ml  lexer.mll  miniturtle.ml  parser.mly  test.logo  turtle.mli
bipToOCamlTranspiler/proof_tex/: Test.tex
bipToOCamlTranspiler/src/: Makefile  ReadMe.txt  ast.ml  ast.mli  ast_bip.ml  ast_core.ml  ast_ml.ml  biplang.ml  dune  explaining_cond_align_loops.ml  interp.ml  lexer.ml  lexer.mll  lexer_test.bml  manual_test.bip  manual_test_output.ml  parser.automaton  parser.conflicts  parser.mly  parser_test.bip  prova_current.ml  sum_time.py  test.ml
bipToOCamlTranspiler/src/_build/: .db  .digest-db  .to-delete-in-source-tree  log
bipToOCamlTranspiler/src/_build/default/: ast.cmi  ast.cmo  ast.ml  dune  interp.ml  lexer.ml  lexer.mll  lexer_test.bml  parser.automaton  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred  run-tests
bipToOCamlTranspiler/src/_build/default/.biplang.eobjs/: biplang.impl.d
bipToOCamlTranspiler/src/_build/default/.biplang.eobjs/byte/: ast.cmi  ast.cmo  ast.cmt  biplang.cmi  biplang.cmo  biplang.cmt  interp.cmti  lexer.cmi  lexer.cmo  lexer.cmt  parser.cmi  parser.cmti
bipToOCamlTranspiler/src/_build/default/.biplang.eobjs/native/: biplang.cmx  lexer.cmx  parser.cmx
bipToOCamlTranspiler/src/_build/default/.lexer.eobjs/: lexer.impl.d
bipToOCamlTranspiler/src/_build/default/.lexer.eobjs/byte/: ast.cmo  ast.cmt  lexer.cmi  lexer.cmo  lexer.cmt  parser.cmi  parser.cmti
bipToOCamlTranspiler/src/_build/default/.lexer.eobjs/native/: ast.cmx  lexer.cmx  parser.cmx
bipToOCamlTranspiler/src/_build/default/.merlin-conf/: exe-biplang  exe-lexer
bipToOCamlTranspiler/src/_build/default/.minipython.eobjs/: interp.impl.d
bipToOCamlTranspiler/src/_build/default/.minipython.eobjs/byte/: ast.cmo  ast.cmt  interp.cmi  interp.cmti  lexer.cmi  lexer.cmo  lexer.cmt  minipython.cmi  minipython.cmo  minipython.cmt  parser.cmi  parser.cmti
bipToOCamlTranspiler/src/_build/default/.minipython.eobjs/native/: interp.cmx  lexer.cmx  minipython.cmx  parser.cmx
bipToOCamlTranspiler/src/_build/default/lexer_only_tests/: biplang_lexer_only.ml-gen  dune  lex_test.ml  lexer.ml  lexer.mll  parser.ml  parser.mli
bipToOCamlTranspiler/src/_build/default/lexer_only_tests/.biplang_lexer_only.objs/: biplang_lexer_only__Ast.impl.d  biplang_lexer_only__Lexer.impl.all-deps  biplang_lexer_only__Lexer.impl.d  biplang_lexer_only__Parser.impl.d  biplang_lexer_only__Parser.intf.d
bipToOCamlTranspiler/src/_build/default/lexer_only_tests/.biplang_lexer_only.objs/byte/: biplang_lexer_only.cmi  biplang_lexer_only.cmo  biplang_lexer_only.cmt  biplang_lexer_only__Ast.cmi  biplang_lexer_only__Ast.cmo  biplang_lexer_only__Ast.cmt  biplang_lexer_only__Lexer.cmi  biplang_lexer_only__Lexer.cmo  biplang_lexer_only__Lexer.cmt  biplang_lexer_only__Parser.cmi  biplang_lexer_only__Parser.cmt  biplang_lexer_only__Parser.cmti
bipToOCamlTranspiler/src/_build/default/lexer_only_tests/.biplang_lexer_only.objs/native/: biplang_lexer_only.cmx  biplang_lexer_only__Ast.cmx  biplang_lexer_only__Lexer.cmx
bipToOCamlTranspiler/src/_build/default/lexer_only_tests/.lex_test.eobjs/: lex_test.impl.d
bipToOCamlTranspiler/src/_build/default/lexer_only_tests/.lex_test.eobjs/byte/: lex_test.cmt
bipToOCamlTranspiler/src/_build/default/lexer_only_tests/.merlin-conf/: exe-lex_test  lib-biplang_lexer_only
bipToOCamlTranspiler/src/lexer_only_tests/: ast.ml  dune
bipToOCamlTranspiler/src/manual_test_output/: why3session.xml
bipToOCamlTranspiler/src/proof_tex/: Manual_test_output.tex
bipToOCamlTranspiler/src/prova_current/: why3session.xml
bipToOCamlTranspiler/src/test/: 000_important.bip  000_important.expected  001_arith_and_fun_sig.expected  002_logic_and_comments.bip  002_logic_and_comments.expected  003_let_and_if.bip  003_let_and_if.expected  004_cycles_and_assert.bip  004_cycles_and_assert.expected  005_match_and_app.bip  005_match_and_app.expected  006_nested_funs.bip  006_nested_funs.expected  007_pipe_and_floor.bip  007_pipe_and_floor.expected  008_type_and.bip  008_type_and.expected  009_modapp_arrays.bip  009_modapp_arrays.expected  010_lists.bip  010_lists.expected  arith_and_fun_sig.bip  arith_and_fun_sig.expected  cmp_and_comments.bip  cmp_and_comments.expected  dune  informal_tests.bip  let_and_if.bip  test.bip  test.expected  update_test_dune.ml  why3session.xml
bipToOCamlTranspiler/test/: why3session.xml
biplang-syntax-highlighting/biplang-syntax-highlighting/: CHANGELOG.md  README.md  biplang-syntax-highlighting-0.0.1.vsix  biplang-syntax-highlighting-0.0.2.vsix  biplang-syntax-highlighting-1.0.0.vsix  package.json  vsc-extension-quickstart.md
biplang-syntax-highlighting/biplang-syntax-highlighting-tests/: test.bip  test.ml
codigos/biprogramsToPPs/: assginment_only.ml  bilateral_conditional.ml  induc_var_strength_red.ml
codigos/cameleer-tutorial/: find.ml  max.ml  merge.ml  mjrty.ml  same_fringe.ml
codigos/equivalence-exercises/: barthe_simple_pp.mlw  fact.ml  fib.ml  gcd.ml  pp_reduction1.mlw  pp_reduction1.mlwZone.Identifier  pp_reduction2.mlw  pp_reduction2.mlwZone.Identifier
codigos/ocamlPractice/: lists.cmi  lists.cmx  lists.ml  program
codigos/pp_construction_rules_tests/: assignment-only.mlw  bilateral_conditional.mlw  unilateral_conditional.mlw  unilateral_conditional_2.mlw  while_loop_diff_iter.mlw
codigos/tests/: next.ml
codigos/why3course/: bin_search.mlw  bin_search_exc.mlw  exo_bezout.mlw  imp_euclidean_div.mlw  imp_isqrt.mlw  imp_sum.mlw  lin_search.mlw  lin_search_for.mlw  little_fermat_3.mlw  mccarthy.mlw  (+3 more)
preparacao/: Ap Prep Tese.pptx
(+125 files in other folders)
