;(ocamllex
 ;(modules lexer))
;(menhir
 ;(modules parser))
;(executable
 ;(name lexer)
; (promote (until-clean))
; (flags ())) 

(ocamllex
 (modules lexer))
(menhir
 (modules parser))
(executable
 (name biplang)
 (modules
   biplang       
   lexer       
   parser       
   ast_bip      
   ast_ml        
 )
 (promote (until-clean))
 (flags ()))
