;; test/dune

;; For each test, we declare a rule that:
;;  1. Depends on the .bip input and the .expected output
;;  2. Runs biplang.exe on the .bip, capturing stdout to .actual
;;  3. Diffs .expected vs .actual under the @runtest alias
;; If they differ, the rule fails; if they’re the same, the rule succeeds quietly.

(rule
 (alias runtest)
 (deps
  arith_and_fun_sig.bip
  arith_and_fun_sig.expected)
 (action
		(progn
			(with-stdout-to arith_and_fun_sig.actual
				(run dune exec .././biplang.exe arith_and_fun_sig.bip))
			(run diff arith_and_fun_sig.expected arith_and_fun_sig.actual))))

(rule
 (alias runtest)
 (deps
  test.bip
  test.expected)
 (action
		(progn
			(with-stdout-to test.actual
				(run dune exec .././biplang.exe test.bip))
			(run diff test.expected test.actual))))

(rule
 (alias runtest)
 (deps
  test2.bip
  test2.expected)
 (action
		(progn
			(with-stdout-to test2.actual
				(run dune exec .././biplang.exe test2.bip))
			(run diff test2.expected test2.actual))))
